# ChatServerZ

./: CMakeLists.txt  autobuild.sh
include/: msgtype.h
include/client/: client.h
include/server/: chatserver.h  service.h
include/server/db/: db.h
include/server/model/: friendmodel.h  group.h  groupmodel.h  groupuser.h  msgmodel.h  user.h  usermodel.h
include/server/redis/: redis.h
src/client/: CMakeLists.txt  client.cpp  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  main.cpp  service.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  msgmodel.cpp  usermodel.cpp
test/: msg.txt
